added akari solver & pacman AI in portfolio

--- a/index.html
+++ b/index.html
@@ -962,6 +962,17 @@
               </a>
             </li>
 
+            <!-- AKARI SOLVER -->
+            <li class="project-item  active" data-filter-item data-category="software development">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/akari.png" alt="akari solver" loading="lazy">
+                </figure>
+                <h3 class="project-title">Light Up (Akari) solver using ASP</h3>
+                <p class="project-category">Software Development</p>
+              </a>
+            </li>
+
             <!-- SPEAKER IDENTIFICATION -->
             <li class="project-item  active" data-filter-item data-category="signal processing">
               <a href="#">
@@ -995,6 +1006,17 @@
               </a>
             </li>
 
+            <!-- PACMAN AI -->
+            <li class="project-item  active" data-filter-item data-category="machine learning">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/pacman.png" alt="pacman" loading="lazy">
+                </figure>
+                <h3 class="project-title">Pac-Man AI player using various AI techniques</h3>
+                <p class="project-category">Machine Learning</p>
+              </a>
+            </li>
+
             <!-- SPANAKAZ -->
             <li class="project-item  active" data-filter-item data-category="software development">
               <a href="#">
@@ -1023,7 +1045,7 @@
                 <figure class="project-img">
                   <img src="./assets/images/sudoku.png" alt="sudoku solver" loading="lazy">
                 </figure>
-                <h3 class="project-title">Implementation of Sudoku Solver</h3>
+                <h3 class="project-title">Sudoku Solver using C</h3>
                 <p class="project-category">Software Development</p>
               </a>
             </li>
