--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar_old.png" alt="Ioannis Kaziales" width="80">
+          <img src="./assets/images/avatar.png" alt="Ioannis Kaziales" width="80">
         </figure>
 
         <div class="info-content">
