added ocr project, updated cv with MSc thesis title

--- a/index.html
+++ b/index.html
@@ -563,6 +563,8 @@
                 University of Crete, Computer Science Department<br>
                 <span>Expected Graduation:</span> June 2024<br>
                 <span>current GPA:</span> 9.7/10<br>
+                <span>Thesis:</span> Open vocabulary image segmentation algorithms with deep neural networks<br>
+                <span>Advisor:</span> Nikos Komodakis (Assistant Professor)
               </p>
             </li>
 
@@ -919,6 +921,17 @@
                   <img src="./assets/images/particleSwarm.gif" alt="schedule" loading="lazy">
                 </figure>
                 <h3 class="project-title">Circle/Ellipse Tracking using Particle Swarm Optimization</h3>
+                <p class="project-category">Computer Vision</p>
+              </a>
+            </li>
+
+            <!-- AKARI SOLVER -->
+            <li class="project-item  active" data-filter-item data-category="computer vision">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/ocr.png" alt="digit recognition" loading="lazy">
+                </figure>
+                <h3 class="project-title">Optical Digit Recognition using generalized Hough transform</h3>
                 <p class="project-category">Computer Vision</p>
               </a>
             </li>
