changed resume (iacm scholarship) + about

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
         <section class="about-text">
           <p>
-            I'm an M.Sc. student at the Computer Science Department of the University of Crete. My current research interests fall in the areas of signal processing, machine learning and neural networks.
+            I'm an M.Sc. student at the Computer Science Department of University of Crete and a Research Assistant at the Institute of Applied and Computational Mathematics of FO.R.T.H. My research interests fall in the areas of signal processing, machine learning and neural networks.
           </p>
 
           <p>
-            I have always been fascinated by the potential of artificial intelligence to revolutionize how we approach complex problems and make meaningful impact in the world. My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. Currently I am mainly focused on speech, audio and image processing tasks.
+            I have always been fascinated by the potential of artificial intelligence to revolutionize how we approach complex problems and make meaningful impact in the world. My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. I am mainly focused on image, speech, and audio processing tasks. Currently, I am working on the task of image segmentation.
           </p>
         </section>
 
@@ -534,6 +534,17 @@
             <h3 class="h3">Work/Experience</h3>
           </div>
           <ol class="timeline-list">
+
+            <!-- MSc Internship - iacm -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Postgraduate Research Assistant</h4>
+              <span>11/2023 — present</span>
+              <p class="timeline-text">
+                Institute of Applied and Computational Mathematics, FO.R.T.H.
+              </p>
+            </li>
+
+            <!-- SPL Undergraduate Internship -->
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Undergraduate Internship</h4>
               <span>10/2019 — 06/2022</span>
@@ -610,7 +621,7 @@
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Undergraduate Scholarship "Stelios Orphanoudakis"</h4>
+              <h4 class="h4 timeline-item-title">Distinguished Undergraduate Scholarship "Stelios Orphanoudakis"</h4>
               <span>2019-2020, 2020-2021, 2021-2022</span>
               <p class="timeline-text">
                 Institute of Computer Science, FO.R.T.H.
@@ -690,7 +701,7 @@
 
             <!-- CSD TEACHING ASSISTANT -->
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Teaching Assistant for <a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a>, <a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a> and <a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a> courses</h4>
+              <h4 class="h4 timeline-item-title">Teaching Assistant for <a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a>, <a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a>, <a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a>, and <a href="https://www.csd.uoc.gr/~hy371/" target="_blank">Image Processing</a> courses at UoC</h4>
             </li>
 
             <!-- CSD CAREER FAIR -->
