add blending project, change TAs

--- a/index.html
+++ b/index.html
@@ -701,7 +701,14 @@
 
             <!-- CSD TEACHING ASSISTANT -->
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Teaching Assistant for <a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a>, <a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a>, <a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a>, and <a href="https://www.csd.uoc.gr/~hy371/" target="_blank">Image Processing</a> courses at UoC</h4>
+              <h4 class="h4 timeline-item-title">Teaching Assistant for the following courses at UoC:</h4>
+              <ol>
+                <li style="display: inline-block"><a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy371/" target="_blank">Image Processing</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy587/" target="_blank">Neural Networks</a></li>&emsp;
+              </ol>
             </li>
 
             <!-- CSD CAREER FAIR -->
@@ -921,6 +928,20 @@
           </div>
 
           <ul class="project-list">
+
+          <!-- PARTICLE SWARM -->
+            <li class="project-item  active" data-filter-item data-category="computer vision">
+              <a target="_blank" href="https://github.com/JohnnyKaz/ComputerVision/tree/main/Image-Bleding">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/blend.png" alt="image blending" loading="lazy">
+                </figure>
+                <h3 class="project-title">Image Blending & Editing with Traditional Techniques</h3>
+                <p class="project-category">Computer Vision</p>
+              </a>
+            </li>
 
             <!-- PARTICLE SWARM -->
             <li class="project-item  active" data-filter-item data-category="computer vision">
