update to 14/11/2024 version

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
             <div class="modal-img-wrapper">
               <figure class="modal-avatar-box">
-                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                <img src="./assets/images/avatar-1.png" alt="Person 1" width="80" data-modal-img>
               </figure>
 
               <img src="./assets/images/icon-quote.svg" alt="quote icon">
@@ -431,11 +431,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                  lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                  consectetur adipiscing
-                  elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                  Testimonial goes here
                 </p>
               </div>
 
@@ -538,7 +534,7 @@
             <!-- MSc Internship - iacm -->
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Postgraduate Research Assistant</h4>
-              <span>11/2023 — present</span>
+              <span>11/2023 — 10/2024</span>
               <p class="timeline-text">
                 Institute of Applied and Computational Mathematics, FO.R.T.H.
               </p>
@@ -572,9 +568,9 @@
               <span>2022 — present</span>
               <p class="timeline-text">
                 University of Crete, Computer Science Department<br>
-                <span>Expected Graduation:</span> September 2024<br>
-                <span>current GPA:</span> 9.75/10<br>
-                <span>Thesis:</span> Open vocabulary image segmentation algorithms with deep neural networks<br>
+                <span>Expected Graduation:</span> March 2025<br>
+                <span>current GPA:</span> 9.64/10<br>
+                <span>Thesis:</span> Open Vocabulary Image Segmentation algorithms with deep Neural Networks<br>
                 <span>Advisor:</span> Nikos Komodakis (Assistant Professor)
               </p>
             </li>
@@ -586,7 +582,7 @@
               <p class="timeline-text">
                 University of Crete, Computer Science Department<br>
                 <span>GPA:</span> 9.18/10<br>
-                <span>Thesis:</span> Image Segmentation algorithms based on "transformer" neural networks<br>
+                <span>Thesis:</span> Image Segmentation algorithms based on "transformer" Neural Networks<br>
                 <span>Advisor:</span> Nikos Komodakis (Assistant Professor)
               </p>
             </li>
@@ -648,11 +644,12 @@
                 Advanced:
               </span>
             </li><br>&emsp;
-            <li class="skills-text">C</li>&emsp;
             <li class="skills-text">Python</li>&emsp;
+            <li class="skills-text">Pytorch</li>&emsp;
             <li class="skills-text">MATLAB</li>&emsp;
-            <li class="skills-text">Linux</li>&emsp;
+            <li class="skills-text">C</li>&emsp;
             <li class="skills-text">LaTeX</li>&emsp;
+            <li class="skills-text">Linux</li>&emsp;
             <li class="skills-text">Markdown</li>
             <br>
 
@@ -665,7 +662,6 @@
                 Intermediate:
               </span>
             </li><br>&emsp;
-            <li class="skills-text">Pytorch</li>&emsp;
             <li class="skills-text">Git/Github</li>&emsp;
             <li class="skills-text">C++</li>&emsp;
             <li class="skills-text">Java</li>&emsp;
@@ -682,6 +678,7 @@
               </span>
             </li><br>&emsp;
             <li class="skills-text">TensorFlow</li>&emsp;
+            <li class="skills-text">Javascript</li>&emsp;
             <li class="skills-text">CSS</li>&emsp;
             <li class="skills-text">Prolog</li>&emsp;
             <li class="skills-text">ASP</li>&emsp;
@@ -703,15 +700,32 @@
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Teaching Assistant for the following courses at UoC:</h4>
               <ol>
-                <li style="display: inline-block"><a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a></li>&emsp;
-                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a></li>&emsp;
-                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a></li>&emsp;
-                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy371/" target="_blank">Image Processing</a></li>&emsp;
-                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy587/" target="_blank">Neural Networks</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy371/" target="_blank" style="color: hsl(45, 100%, 72%)">Image Processing</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy587/" target="_blank" style="color: hsl(45, 100%, 72%)">Neural Networks</a></li>&emsp;
+                <li style="display: inline-block"><a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank" style="color: hsl(45, 100%, 72%)">Probability</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy119/" target="_blank" style="color: hsl(45, 100%, 72%)">Linear Algebra</a></li>&emsp;
+                <li style="display: inline-block"><a href="https://www.csd.uoc.gr/~hy225/" target="_blank" style="color: hsl(45, 100%, 72%)">Computer Organization</a></li>&emsp;
               </ol>
             </li>
 
-            <!-- CSD CAREER FAIR -->
+
+            <!-- CSD CAREER FAIR 2024 -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Organizing Committee Member at the "<a href="https://careerfair.csd.uoc.gr/" target="_blank">CSD Career Fair</a>" 2024</h4>
+            </li>
+
+            <!-- HellasQCI EVENT 2024 -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Attendance at the "<a href="https://hellasqci.eu/day-2-qkd-pqc-for-cybersecurity/" target="_blank">HellasQCI Training Event Crete</a>" 2024</h4>
+            </li>
+
+            <!-- HellasQCI EVENT 2024 -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Volunteer at the "<a href="https://2023.fosscomm.gr/" target="_blank">FOSSCOMM</a>" pan-Hellenic conference 2023</h4>
+            </li>
+
+
+            <!-- CSD CAREER FAIR 2023 -->
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Organizing Committee Member at the "<a href="https://careerfaircsd2023.com/" target="_blank">CSD Career Fair</a>" 2023</h4>
             </li>
